fixed clipping issue between about me and project sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3217,7 +3217,7 @@ input, select, textarea {
 			@media screen and (max-width: 1680px) {
 
 				.wrapper > .inner {
-					padding: 4em 4em 2em 4em ;
+					/* padding: 4em 4em 2em 4em ; */
 				}
 
 			}
